--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,8 @@ dependencies {
 
     //Navigation Component
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    //Coil
+    implementation "io.coil-kt:coil-compose:$coil_version"
+
 }
